9.20. Desafio tratando a exception customizada de validações programáticas