@@ -1,5 +1,6 @@
 package com.algaworks.algafood.api.exceptionhandler;
 
+import com.algaworks.algafood.core.validation.ValidacaoException;
 import com.algaworks.algafood.domain.exception.EntidadeEmUsoException;
 import com.algaworks.algafood.domain.exception.EntidadeNaoEncontradaException;
 import com.algaworks.algafood.domain.exception.NegocioException;
@@ -17,6 +18,7 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
@@ -207,33 +209,46 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers,
                                                                   HttpStatus status, WebRequest request) {
-        final List<Problem.Objects> problemObjectsErros = ex.getAllErrors()
-                .stream()
-                .map(fd -> {
-                    String message = messageSource.getMessage(fd, LocaleContextHolder.getLocale());
-                    String name = null; //fd.getField()
+        return handleValidationInternal(ex, ex.getBindingResult(), headers, status, request);
+    }
 
-                    if(fd instanceof FieldError fieldError){
-                        name = (fieldError).getField();
+    private ResponseEntity<Object> handleValidationInternal(Exception ex,
+                                                            BindingResult bindingResult, HttpHeaders headers,
+                                                            HttpStatus status, WebRequest request) {
+
+        ProblemType problemType = ProblemType.DADOS_INVALIDOS;
+        String detail = "Um ou mais campos estão inválidos. Faça o preenchimento correto e tente novamente.";
+
+        List<Problem.Object> problemObjects = bindingResult.getAllErrors().stream()
+                .map(objectError -> {
+                    String message = messageSource.getMessage(objectError, LocaleContextHolder.getLocale());
+
+                    String name = objectError.getObjectName();
+
+                    if (objectError instanceof FieldError) {
+                        name = ((FieldError) objectError).getField();
                     }
-                    name = fd.getObjectName();
-                    return Problem.Objects.builder()
+
+                    return Problem.Object.builder()
                             .name(name)
                             .userMessage(message)
                             .build();
                 })
-                .toList();
-        
-        final ProblemType problemType = ProblemType.DADOS_INVALIDOS;
-        String detail = "Um ou mais campos estão invalidados. Faça o preenchimento e" +
-                " tente novamente.";
-        final Problem problema = createProblemType(status, problemType, detail)
+                .collect(Collectors.toList());
+
+        Problem problem = createProblemType(status, problemType, detail)
                 .userMessage(detail)
-                .objects(problemObjectsErros)
+                .objects(problemObjects)
                 .build();
-        return handleExceptionInternal(ex, problema, headers, status, request);
+
+        return handleExceptionInternal(ex, problem, headers, status, request);
     }
 
+    @ExceptionHandler(ValidacaoException.class)
+    protected ResponseEntity<Object> handleValidacaoException(ValidacaoException ex, WebRequest request){
+
+        return handleValidationInternal(ex, ex.getBindingResult(), new HttpHeaders(), HttpStatus.BAD_REQUEST, request);
+    }
     private Problem.ProblemBuilder createProblemType (HttpStatus status, ProblemType problemType, String detail){
 
         return Problem.builder()
